# edgehog

./: .env  .gitignore  .gitmodules  .tool-versions  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  README.md  REUSE.toml  SECURITY.md  committed.toml  docker-compose.dev.yml  docker-compose.without-astarte.yml  docker-compose.yml  dprint.json  dprint.json.license  justfile  renovate.json
tools/e2e_test/: .gitignore  Cargo.lock.license  Cargo.toml  README.md  gleam.toml  manifest.toml
tools/e2e_test/graphql/: schema.graphql  schema.graphql.license
tools/e2e_test/graphql/mutations/: create_application.graphql  create_image_credentials.graphql
tools/e2e_test/graphql/queries/: get_application.graphql  image_credentials.graphql
tools/e2e_test/src/: e2e_test.gleam  main.rs
tools/e2e_test/src/containers/: mod.rs
tools/e2e_test/src/containers/mutations/: create_application.rs  mod.rs
tools/e2e_test/src/containers/queries/: get_application.rs  mod.rs
tools/e2e_test/src/image_credentials/: mod.rs
tools/e2e_test/src/image_credentials/mutations/: create_image_credentials.rs  mod.rs
tools/e2e_test/src/image_credentials/queries/: get_image_credentials.rs  mod.rs
tools/e2e_test/src/suite/: client.rs  config.rs  connection.gleam  context.gleam  env.gleam  errors.gleam  logging.gleam  mod.rs
tools/e2e_test/src/suite/types/: request.gleam  request_data.gleam  request_error.gleam  request_result.gleam
tools/e2e_test/src/tests/: image_credentials.gleam
tools/e2e_test/src/tests/image_credentials/: create_credentials.gleam
tools/e2e_test/src/types/: image_credentials.gleam
(+2207 files in other folders)
