[package]
name = "e2e_test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
eyre = "0.6.12"
graphql_client = { version = "0.14.0", features = ["reqwest", "reqwest-blocking", "reqwest-crate", "reqwest-rustls"] }
reqwest = { version =  "0.12.24", features = ["json"]}
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
